--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,6 @@ ios/.xcode.env.local
 
 # Android/IntelliJ
 #
-build/
 .idea
 .gradle
 local.properties
@@ -33,6 +32,7 @@ local.properties
 .cxx/
 *.keystore
 !debug.keystore
+package-lock.json
 
 # node.js
 #
@@ -61,3 +61,4 @@ yarn-error.log
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
