--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "install-pods": "cd ios && pod install"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.22.1",
+    "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
